{
    "name": "InputAsset",
    "maps": [
        {
            "name": "Player",
            "id": "f62a4b92-ef5e-4175-8f4c-c9075429d32c",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "6bc1aaf4-b110-4ff7-891e-5b9fe6f32c4d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "2690c379-f54d-45be-a724-414123833eb4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "8c4abdf8-4099-493a-aa1a-129acec7c3df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "PassThrough",
                    "id": "980e881e-182c-404c-8cbf-3d09fdb48fef",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "765acdd2-906e-4857-ad3d-5711bb536ae6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "adf24615-e0d3-4791-b8b6-75c34ae351d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "b7594ddb-26c9-4ba2-bd5a-901468929edc",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2063a8b5-6a45-43de-851b-65f3d46e7b58",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "64e4d037-32e1-4fb9-80e4-fc7330404dfe",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0fce8b11-5eab-4e4e-a741-b732e7b20873",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7bdda0d6-57a8-47c8-8238-8aecf3110e47",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e2f9aa65-db06-4c5b-a2e9-41bc8acb9517",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed66cbff-2900-4a62-8896-696503cfcd31",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false),ScaleVector2(x=0.05,y=0.05)",
                    "groups": "KeyboardMouse",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1d171b6-19d8-47a6-ba3a-71b6a8e7b3c0",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false),StickDeadzone,ScaleVector2(x=300,y=300)",
                    "groups": "Gamepad",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1bd55a0b-761e-4ae4-89ae-8ec127e08a29",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f973413-5e27-4239-acee-38c4a63feeba",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc65b89f-9bd3-43fb-92af-d0d87ba5faa4",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8fcd86e-dcfd-4f88-8e93-b638cdbf3320",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22ec5299-7925-49b8-a06c-2a6fa1fec419",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51235161-6e7b-4830-9cc5-864196eaecc1",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad;Xbox Controller;PS4 Controller",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7b3a67a-9a72-42bb-81ed-68ec6f43a2e5",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ebbfe26b-3af4-4d1b-a5bd-86f6ba9614e7",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "ce8e3573-a49c-436c-9fb8-ed15c08c1388",
            "actions": [
                {
                    "name": "Item1",
                    "type": "Button",
                    "id": "a16097d7-757e-4cef-8eb9-be0dd0c9709c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Item2",
                    "type": "Button",
                    "id": "962b18a9-d857-4685-882c-35e55dd728f8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Item3",
                    "type": "Button",
                    "id": "a8a98452-0d84-40e8-a72f-28f90ac73283",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Item4",
                    "type": "Button",
                    "id": "eb3865dd-8989-4b76-a840-20b4cc101c8b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Item5",
                    "type": "Button",
                    "id": "dabff494-3759-40e6-8b40-5162d517a017",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Item6",
                    "type": "Button",
                    "id": "d7532dce-e9df-41c4-84f9-62823119f10d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Item7",
                    "type": "Button",
                    "id": "b80ef66d-419a-47d2-8cfa-b6b62d97e6df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Item8",
                    "type": "Button",
                    "id": "03d9aa9c-2566-4b4d-8d38-bd5c590cd84f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Item9",
                    "type": "Button",
                    "id": "74a8dff5-580a-40b1-8607-f13d6eea63f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Item10",
                    "type": "Button",
                    "id": "0c45324b-8520-4541-a2ea-722f09088000",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ItemNext",
                    "type": "Button",
                    "id": "18baff32-151e-4547-b473-74b6466f5007",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ItemPrev",
                    "type": "Button",
                    "id": "cf6b3665-1fc3-44d6-8023-8ae57e84492d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a68225eb-61f3-40d2-ba13-e38c89bad138",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Item1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed8d333a-519e-41b5-92a9-afa2d4ddf347",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Item2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "923b1d40-c45e-411e-a347-c4a3fc6d7ba3",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Item3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a38f3c2a-3477-4e27-b4b3-4649782e9d5c",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Item4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4dcdca36-8ece-498c-baee-604ec95fbcb2",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Item5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f6ece80b-4867-482c-b4f6-9cf7ff0ff04a",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Item6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ea7649d-ad69-436b-83a3-d6afdbc18e6f",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Item7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dca33e79-f1f7-4a03-a6fd-1edc9d00e5b6",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Item8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7969849c-bd49-40f5-b0e7-add813d46248",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Item9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3acad74-4698-4370-8051-944bd9a5edeb",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "ItemNext",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2250b9a2-402f-45aa-bf1e-249907984cd8",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "ItemPrev",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8594bb80-2f5f-4c6c-9e87-886c39b098d8",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Item10",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardMouse",
            "bindingGroup": "KeyboardMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": true,
                    "isOR": false
                },
                {
                    "devicePath": "<XInputController>",
                    "isOptional": true,
                    "isOR": false
                },
                {
                    "devicePath": "<DualShockGamepad>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Xbox Controller",
            "bindingGroup": "Xbox Controller",
            "devices": []
        },
        {
            "name": "PS4 Controller",
            "bindingGroup": "PS4 Controller",
            "devices": []
        }
    ]
}